--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Erik Aakre",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "mongoose": "^6.6.1",
